gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-allocator_internals.rs
#![default_lib_allocator] // { dg-error ".E0658." "" { target *-*-* } }

fn main() {}

